--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,16 @@
 PORT=4000
-CLOUDINARY_API_KEY=551545915779516
-CLOUDINARY_API_SECRET=V9XXY8LlMn0K-EIpvp_s347As8U
-CLOUDINARY_CLOUD_NAME=dteek0veh
+CLOUDINARY_API_KEY=875411376687998
+CLOUDINARY_API_SECRET=2ecFJ547AmNKmk-U4Grl9iu4124
+CLOUDINARY_CLOUD_NAME=dvo2j7nyo
 FRONTEND_URL=http://localhost:4000
-DB_URL=mongodb+srv://preetineelam012:49zwhFfsGbwcpiYT@cluster0.crpysia.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET_KEY=fgjfgsudgfudnhfousidfnewuikfmlewf
+DB_URL=mongodb+srv://yadavneha2403:EgAtHjtVx7JukMcN@cluster0.7xxrhsi.mongodb.net/portal?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET_KEY=mySecretkey@2403
 JWT_EXPIRE=7d
 COOKIE_EXPIRE=7
-NODE_ENV=development npm 
+NODE_ENV=development 
+FRONTEND_URL=http://localhost:5173 
+
+
+
+# rw5eIG4vNBTJfiHa
+# yadavneha2403
