--- a/backend/package.json
+++ b/backend/package.json
@@ -5,21 +5,22 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-     "start": "node server.js",
-  "build": "cd ../frontend && npm install && npm run build && cd ../backend && npm install"
+    "start": "node server.js",
+    "build": "cd ../frontend && npm install && npm run build && cd ../backend && npm install"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cloudinary": "^1.41.2",
-    "cookie-parser": "^1.4.6",
+    "bcryptjs": "^3.0.2",
+    "cloudinary": "^1.41.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-fileupload": "^1.4.3",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "express-fileupload": "^1.5.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
+    "mongoose": "^8.17.2",
     "path": "^0.12.7",
     "validator": "^13.11.0"
   },
