add these changes

--- a/backend/.env
+++ b/backend/.env
@@ -1,16 +1,10 @@
 PORT=4000
-CLOUDINARY_API_KEY=875411376687998
-CLOUDINARY_API_SECRET=2ecFJ547AmNKmk-U4Grl9iu4124
-CLOUDINARY_CLOUD_NAME=dvo2j7nyo
+CLOUDINARY_API_KEY=	532525252136863
+CLOUDINARY_API_SECRET=EmE0hQCp6QLUFN2x8lpuvRd1WeU
+CLOUDINARY_CLOUD_NAME= dvo2j7nyo
 FRONTEND_URL=http://localhost:4000
-DB_URL=mongodb+srv://yadavneha2403:EgAtHjtVx7JukMcN@cluster0.7xxrhsi.mongodb.net/portal?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET_KEY=mySecretkey@2403
+DB_URL=mongodb+srv://yadavneha2004:yadav_neha2001@cluster0.yuodnaf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET_KEY=fgjfgsudgfudnhfousidfnewuikfmlewf
 JWT_EXPIRE=7d
 COOKIE_EXPIRE=7
-NODE_ENV=development 
-FRONTEND_URL=http://localhost:5173 
-
-
-
-# rw5eIG4vNBTJfiHa
-# yadavneha2403
+NODE_ENV=development npm 
